--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,76 @@
-/*Maak hier jouw CSS!*/
+@import url('https://fonts.googleapis.com/css2?family=Andika+New+Basic&display=swap');
+
+:root {
+    --secondary-clr: #f3f2da;
+    --primary-clr: #4e8d7c;
+    --accent-clr: #045762;
+}
+
+body {
+    background: #333;
+    font-family: 'Andika New Basic', sans-serif;
+}
+
+.container {
+    background: var(--secondary-clr);
+    display: grid;
+    gap: 16px;
+    padding: 16px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px auto 50px 50px 50px 50px 50px;
+    grid-template-areas:
+            "a"
+            "b"
+            "c"
+            "d"
+            "e"
+            "."
+            "f";
+}
+
+.item {
+    background: var(--primary-clr);
+    border: 2px solid var(--accent-clr);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--secondary-clr);
+    padding: 1rem;
+}
+
+#item-a {
+    grid-area: a;
+}
+
+#item-b {
+    grid-area: b;
+}
+
+#item-c {
+    grid-area: c;
+}
+
+#item-d {
+    grid-area: d;
+}
+
+#item-e {
+    grid-area: e;
+}
+
+#item-f {
+    grid-area: f;
+}
+
+@media only screen and (min-width: 576px) {
+    .container {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 50px 190px 100px auto 50px;
+        grid-template-areas:
+            "a c c"
+            "b c c"
+            "b e d"
+            "b e ."
+            "f f f";
+    }
+}
